src/test/resources/acceptance/reject/ifKeywordAsId.ul
int id1 ()
{
    if;
}
